# Tiger0Compiler

./: Assembly.hs  Interm.hs  Lexer.x  Main.hs  Parser.y  README.md  tiger.cabal
tests/: fail.txt  test.txt  test_2.txt  test_3.txt  teste.txt
