
name:                calc
version:             0.1.0.0
synopsis:            Tiger compiler
description:         Tiger compiler
author:              O seu nome
maintainer:          o-seu-email@fc.up.pt
category:            Language
build-type:          Simple
cabal-version:       >=1.10
                     
executable tiger
  main-is:             Main.hs
  other-modules:       Lexer, Parser, Interm, Assembly
  build-tools:         alex, happy
  build-depends:       base, array, containers, mtl
  hs-source-dirs:      
  default-language:    Haskell2010
